# project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  df_reader.py  external_api.py  generators.py  masks.py  processing.py  transactions_utils.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_df_reader.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_utils.py  test_utils.py  test_widget.py
